Лаб 5/antlr_generated/ListLangParser.py
# Generated from ListLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ListLangParser ( Parser ):

    grammarFileName = "ListLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'if'", "'else'", "'while'", 
                     "'until'", "'for'", "'return'", "'to'", "'in'", "'write'", 
                     "'read'", "'int'", "'float'", "'element'", "'list'", 
                     "'tree'", "'queue'", "'true'", "'false'", "'null'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'..'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "FUNCTION", "IF", "ELSE", "WHILE", "UNTIL", 
                      "FOR", "RETURN", "TO", "IN", "WRITE", "READ", "INT_TYPE", 
                      "FLOAT_TYPE", "ELEMENT", "LIST", "TREE", "QUEUE", 
                      "TRUE", "FALSE", "NULL", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "ASSIGN", "RANGE", "LT", "GT", "LTE", 
                      "GTE", "EQ", "NEQ", "AND", "OR", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "LBRACE", "RBRACE", "DOT", "COMMA", 
                      "SEMI", "ID", "INT", "FLOAT", "STRING", "WS", "COMMENT", 
                      "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_parameterList = 2
    RULE_statement = 3
    RULE_assignment = 4
    RULE_returnStatement = 5
    RULE_ifStatement = 6
    RULE_whileStatement = 7
    RULE_untilStatement = 8
    RULE_forStatement = 9
    RULE_writeStatement = 10
    RULE_readStatement = 11
    RULE_block = 12
    RULE_expression = 13
    RULE_functionCall = 14
    RULE_argumentList = 15
    RULE_expressionList = 16
    RULE_type = 17
    RULE_literal = 18

    ruleNames =  [ "program", "functionDecl", "parameterList", "statement", 
                   "assignment", "returnStatement", "ifStatement", "whileStatement", 
                   "untilStatement", "forStatement", "writeStatement", "readStatement", 
                   "block", "expression", "functionCall", "argumentList", 
                   "expressionList", "type", "literal" ]

    EOF = Token.EOF
    FUNCTION=1
    IF=2
    ELSE=3
    WHILE=4
    UNTIL=5
    FOR=6
    RETURN=7
    TO=8
    IN=9
    WRITE=10
    READ=11
    INT_TYPE=12
    FLOAT_TYPE=13
    ELEMENT=14
    LIST=15
    TREE=16
    QUEUE=17
    TRUE=18
    FALSE=19
    NULL=20
    PLUS=21
    MINUS=22
    MULT=23
    DIV=24
    MOD=25
    ASSIGN=26
    RANGE=27
    LT=28
    GT=29
    LTE=30
    GTE=31
    EQ=32
    NEQ=33
    AND=34
    OR=35
    LPAREN=36
    RPAREN=37
    LBRACK=38
    RBRACK=39
    LBRACE=40
    RBRACE=41
    DOT=42
    COMMA=43
    SEMI=44
    ID=45
    INT=46
    FLOAT=47
    STRING=48
    WS=49
    COMMENT=50
    MULTILINE_COMMENT=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ListLangParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(ListLangParser.FunctionDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(ListLangParser.StatementContext,i)


        def getRuleIndex(self):
            return ListLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ListLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 529208692182262) != 0):
                self.state = 40
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 38
                    self.functionDecl()
                    pass
                elif token in [2, 4, 5, 6, 7, 10, 11, 18, 19, 20, 36, 38, 40, 45, 46, 47, 48]:
                    self.state = 39
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(ListLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ListLangParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(ListLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ListLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ListLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ListLangParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(ListLangParser.ParameterListContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = ListLangParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ListLangParser.FUNCTION)
            self.state = 48
            self.match(ListLangParser.ID)
            self.state = 49
            self.match(ListLangParser.LPAREN)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 50
                self.parameterList()


            self.state = 53
            self.match(ListLangParser.RPAREN)
            self.state = 54
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.ID)
            else:
                return self.getToken(ListLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ListLangParser.COMMA)
            else:
                return self.getToken(ListLangParser.COMMA, i)

        def getRuleIndex(self):
            return ListLangParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = ListLangParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(ListLangParser.ID)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 57
                self.match(ListLangParser.COMMA)
                self.state = 58
                self.match(ListLangParser.ID)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(ListLangParser.AssignmentContext,0)


        def SEMI(self):
            return self.getToken(ListLangParser.SEMI, 0)

        def functionCall(self):
            return self.getTypedRuleContext(ListLangParser.FunctionCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(ListLangParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(ListLangParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(ListLangParser.WhileStatementContext,0)


        def untilStatement(self):
            return self.getTypedRuleContext(ListLangParser.UntilStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(ListLangParser.ForStatementContext,0)


        def writeStatement(self):
            return self.getTypedRuleContext(ListLangParser.WriteStatementContext,0)


        def readStatement(self):
            return self.getTypedRuleContext(ListLangParser.ReadStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(ListLangParser.BlockContext,0)


        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ListLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.assignment()
                self.state = 65
                self.match(ListLangParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.functionCall()
                self.state = 68
                self.match(ListLangParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.returnStatement()
                self.state = 71
                self.match(ListLangParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.untilStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.forStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.writeStatement()
                self.state = 78
                self.match(ListLangParser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 80
                self.readStatement()
                self.state = 81
                self.match(ListLangParser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 83
                self.block()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 84
                self.expression(0)
                self.state = 85
                self.match(ListLangParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ListLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ListLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ListLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(ListLangParser.ID)
            self.state = 90
            self.match(ListLangParser.ASSIGN)
            self.state = 91
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(ListLangParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = ListLangParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ListLangParser.RETURN)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 528109180551168) != 0):
                self.state = 94
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ListLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(ListLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(ListLangParser.ELSE, 0)

        def getRuleIndex(self):
            return ListLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = ListLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ListLangParser.IF)
            self.state = 98
            self.expression(0)
            self.state = 99
            self.block()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 100
                self.match(ListLangParser.ELSE)
                self.state = 101
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ListLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ListLangParser.BlockContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = ListLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ListLangParser.WHILE)
            self.state = 105
            self.expression(0)
            self.state = 106
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntilStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNTIL(self):
            return self.getToken(ListLangParser.UNTIL, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ListLangParser.BlockContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_untilStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntilStatement" ):
                listener.enterUntilStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntilStatement" ):
                listener.exitUntilStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntilStatement" ):
                return visitor.visitUntilStatement(self)
            else:
                return visitor.visitChildren(self)




    def untilStatement(self):

        localctx = ListLangParser.UntilStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_untilStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(ListLangParser.UNTIL)
            self.state = 109
            self.expression(0)
            self.state = 110
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ListLangParser.FOR, 0)

        def assignment(self):
            return self.getTypedRuleContext(ListLangParser.AssignmentContext,0)


        def TO(self):
            return self.getToken(ListLangParser.TO, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ListLangParser.BlockContext,0)


        def getRuleIndex(self):
            return ListLangParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = ListLangParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ListLangParser.FOR)
            self.state = 113
            self.assignment()
            self.state = 114
            self.match(ListLangParser.TO)
            self.state = 115
            self.expression(0)
            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(ListLangParser.WRITE, 0)

        def LPAREN(self):
            return self.getToken(ListLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(ListLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return ListLangParser.RULE_writeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStatement" ):
                listener.enterWriteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStatement" ):
                listener.exitWriteStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStatement" ):
                return visitor.visitWriteStatement(self)
            else:
                return visitor.visitChildren(self)




    def writeStatement(self):

        localctx = ListLangParser.WriteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_writeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ListLangParser.WRITE)
            self.state = 119
            self.match(ListLangParser.LPAREN)
            self.state = 120
            self.expression(0)
            self.state = 121
            self.match(ListLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(ListLangParser.READ, 0)

        def LPAREN(self):
            return self.getToken(ListLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ListLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return ListLangParser.RULE_readStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStatement" ):
                listener.enterReadStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStatement" ):
                listener.exitReadStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStatement" ):
                return visitor.visitReadStatement(self)
            else:
                return visitor.visitChildren(self)




    def readStatement(self):

        localctx = ListLangParser.ReadStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_readStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(ListLangParser.READ)
            self.state = 124
            self.match(ListLangParser.LPAREN)
            self.state = 125
            self.match(ListLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ListLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ListLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ListLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(ListLangParser.StatementContext,i)


        def getRuleIndex(self):
            return ListLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ListLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ListLangParser.LBRACE)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 529208692182260) != 0):
                self.state = 128
                self.statement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(ListLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ListLangParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CastExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ListLangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ListLangParser.LPAREN, 0)
        def type_(self):
            return self.getTypedRuleContext(ListLangParser.TypeContext,0)

        def RPAREN(self):
            return self.getToken(ListLangParser.RPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ListLangParser.ExpressionContext,0)

